Linting, organise and automated API docs (#11)
